--- a/src/pages/Outreach.css
+++ b/src/pages/Outreach.css
@@ -295,3 +295,8 @@ body {
   }
 }
 
+@media (min-width: 1280px) and (max-width: 1599px) {
+  .black-title {
+    transform: translateY(40px);   /* move DOWN */
+  }
+}
